<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>factory</name>
  <version>1.0.0</version>
  <description>RTLS plugin for DP3 RMF Chart Lab demos</description>
  <maintainer email="jun_hao_chng@cgh.com.sg">JH</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
